--- a/layout/index.html
+++ b/layout/index.html
@@ -63,7 +63,7 @@
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
-                    <li><a href="https://kdong1224.tistory.com/">Tistory</a></li>
+                    <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
                     <!-- <li><a href="https://codepen.io/webstoryboy">Codepen</a></li> -->
                     <li><a href="https://github.com/webstoryboy/dothome1">Github</a></li>
                     <!-- <li><a href="https://www.figma.com/@874463">Figma</a></li> -->
@@ -74,7 +74,7 @@
     <div class="bs-header bgs1" id="content">
         <div class="container">
             <h1>Layout Reference v1.0 &lt;/doc&gt;</h1>
-            <p><a href="http://kdong.dothome.co.kr" target="_blank">kdong.dothome.co.kr</a></p>
+            <p><a href="https://kdong1224.github.io/dothome21/" target="_blank">kdong1224.github.io</a></p>
         </div>
     </div>
     <div class="container bs-docs-container">
