--- a/layout/layout06.html
+++ b/layout/layout06.html
@@ -6,101 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃 연습6</title>
     <style>
-        @font-face {
-            font-family: 'twayfly';
-            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_tway@1.0/twayfly.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
         * {
             margin: 0;
             padding: 0;
         }
-        #wrap {
-            font-family: twayfly;
-            width: 100%;
-            background-color: #2962ff;
-            text-align: center;
-            color: #fff;
-            font-size: 60px;
-            text-transform: uppercase;
-        }
         #header {
-            width: 100%;
-            height: 115px;
-            line-height: 115px;
-            background-color: #E3F2FD;
+            height: 110px;
+            background-color: #f3e5f5;
         }
         #banner {
-            width: 100%;
             height: 750px;
-            line-height: 750px;
-            background-color: #BBDEFB;
+            background-color: #e1bee7;
         }
         #content1 {
-            width: 100%;
             height: 2280px;
-            line-height: 2280px;
-            background-color: #90CAF9;
+            background-color: #ce93d8;
         }
         #content2 {
-            width: 100%;
             height: 1570px;
-            line-height: 1570px;
-            background-color: #64B5F6;
+            background-color: #ba68c8;
         }
         #content3 {
-            width: 100%;
             height: 530px;
-            line-height: 530px;
-            background-color: #42A5F5;
+            background-color: #ab47bc;
         }
         #footer {
-            width: 100%;
             height: 270px;
-            line-height: 270px;
-            background-color: #2196F3;
+            background-color: #9c27b0;
         }
-        .header_inner {
+        .container {
             width: 1200px;
-            height: 115px;
-            line-height: 115px;
-            background-color: #B39DDB;
-            margin: 0 auto;
-        }
-        .banner_inner {
-            width: 1200px;
-            height: 750px;
-            line-height: 750px;
-            background-color: #9575CD;
-            margin: 0 auto;
-        }
-        .content1_inner {
-            width: 1200px;
-            height: 2280px;
-            line-height: 2280px;
-            background-color: #7E57C2;
-            margin: 0 auto;
-        }
-        .content2_inner {
-            width: 1200px;
-            height: 1570px;
-            line-height: 1570px;
-            background-color: #673AB7;
-            margin: 0 auto;
-        }
-        .content3_inner {
-            width: 1200px;
-            height: 530px;
-            line-height: 530px;
-            background-color: #5E35B1;
-            margin: 0 auto;
-        }
-        .footer_inner {
-            width: 1200px;
-            height: 270px;
-            line-height: 270px;
-            background-color: #512DA8;
+            height: inherit;
+            background-color: rgba(0, 0, 0, 0.3);
             margin: 0 auto;
         }
     </style>
@@ -108,23 +45,33 @@
 <body>
     <div id="wrap">
         <div id="header">
-            <div class="header_inner">header(1200px*115px)</div>  
+            <div class="container">header</div>
         </div>
+        <!-- //header  -->
+
         <div id="banner">
-            <div class="banner_inner">banner(1200px*750px)</div>
+            <div class="container">banner</div>
         </div>
-        <div id="content1">
-            <div class="content1_inner">content1(1200px*2280px)</div>
+        <!-- //banner  -->
+
+        <div id="contents">
+            <div id="content1">
+                <div class="container">content1</div>
+            </div>
+            <div id="content2">
+                <div class="container">content2</div>
+            </div>
+            <div id="content3">
+                <div class="container">content3</div>
+            </div>
         </div>
-        <div id="content2">
-            <div class="content2_inner">content2(1200px*1570px)</div>
-        </div>
-        <div id="content3">
-            <div class="content3_inner">content3(1200px*530px)</div>
-        </div>
+        <!-- //contents  -->
+
         <div id="footer">
-            <div class="footer_inner">footer(1200px*270px)</div>
+            <div class="container">footer</div>
         </div>
+        <!-- //footer  -->
     </div>
+    <!-- //wrap  -->
 </body>
 </html>
