--- a/layout/index.html
+++ b/layout/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="webstoryboy">
     <meta name="description" content="웹 퍼블리셔를 위한 정보 공유 사이트입니다.">
     <meta name="keywords"
-        content="크도동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design, Webstoryboy">
-    <title>크도동 | KDONG | LAYOUT</title>
+        content="크동, 웹 퍼블리셔, 웹 표준, 웹 접근성, 화려한 디자인, webstoryboy, publisher, css3, html, markup, design, Webstoryboy">
+    <title>크동 | KDONG | LAYOUT</title>
     <!-- Bootstrap core CSS -->
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/docs.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <link rel="icon" href="../assets/ico/favicon_114.png" sizes="128x128">
     <!-- Facebook meta tags -->
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="크도동" />
+    <meta property="og:title" content="크동" />
     <meta property="og:url" content="https://webstoryboy.co.kr/" />
     <meta property="og:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
     <meta property="og:site_name" content="웹스토리보이" />
@@ -32,7 +32,7 @@
     <!-- twitter meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@noyclah_jdk" />
-    <meta name="twitter:title" content="크도동" />
+    <meta name="twitter:title" content="크동" />
     <meta name="twitter:description" content="웹과 관련된 정보를 제공합니다." />
     <meta property="twitter:image" content="http://richclub8.dothome.co.kr/assets/ico/icon.png" />
     <!-- 웹 폰트 -->
