--- a/layout/index.html
+++ b/layout/index.html
@@ -220,6 +220,19 @@
                 </div>
                 <!-- //Intro10 -->
 
+                <!-- Intro11 -->
+                <!-- <div class="bs-docs-section">
+                    <h2 id="intro11" class="page-header">레이아웃 기본11</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout11.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout11.html">View</a></p>
+                </div> -->
+                <!-- //Intro11 -->
 
             </div>
             <!-- //col-md-9 -->
@@ -238,6 +251,7 @@
                         <li><a href="#intro8">레이아웃8</a></li>
                         <li><a href="#intro9">레이아웃9</a></li>
                         <li><a href="#intro10">레이아웃10</a></li>
+                        <!-- <li><a href="#intro11">레이아웃11</a></li> -->
                     </ul>
                 </div>
             </div>
