--- a/layout/index.html
+++ b/layout/index.html
@@ -220,19 +220,75 @@
                 </div>
                 <!-- //Intro10 -->
 
-                <!-- Intro11 -->
-                <!-- <div class="bs-docs-section">
-                    <h2 id="intro11" class="page-header">레이아웃 기본11</h2>
+                <!-- Intro-test10 -->
+                <div class="bs-docs-section">
+                    <h2 id="Intro-test10" class="page-header">레이아웃 테스트10</h2>
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
-                                <img src="img/layout11.jpg" alt="레이아웃">
+                                <img src="img/layout-test10.jpg" alt="레이아웃">
                             </a>
                         </div>
                     </div>
-                    <p>코드 보기 <a href="layout11.html">View</a></p>
-                </div> -->
-                <!-- //Intro11 -->
+                    <p>코드 보기 <a href="layout-test10.html">View</a></p>
+                </div>
+                <!-- //Intro-test10 -->
+
+                <!-- Intro-test11 -->
+                <div class="bs-docs-section">
+                    <h2 id="Intro-test11" class="page-header">레이아웃 테스트11</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout-test11.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout-test11.html">View</a></p>
+                </div>
+                <!-- //Intro-test11 -->
+
+                <!-- Intro-test12 -->
+                <div class="bs-docs-section">
+                    <h2 id="Intro-test12" class="page-header">레이아웃 테스트12</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout-test12.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout-test12.html">View</a></p>
+                </div>
+                <!-- //Intro-test12 -->
+
+                <!-- Intro-test13 -->
+                <div class="bs-docs-section">
+                    <h2 id="Intro-test13" class="page-header">레이아웃 테스트13</h2>
+                    <div class="row">
+                        <div class="col-md-13">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout-test13.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout-test13.html">View</a></p>
+                </div>
+                <!-- //Intro-test13 -->
+
+                <!-- Intro-test14 -->
+                <div class="bs-docs-section">
+                    <h2 id="Intro-test14" class="page-header">레이아웃 테스트14</h2>
+                    <div class="row">
+                        <div class="col-md-14">
+                            <a href="#" class="thumbnail">
+                                <img src="img/layout-test14.jpg" alt="레이아웃">
+                            </a>
+                        </div>
+                    </div>
+                    <p>코드 보기 <a href="layout-test14.html">View</a></p>
+                </div>
+                <!-- //Intro-test14 -->
 
             </div>
             <!-- //col-md-9 -->
@@ -251,7 +307,11 @@
                         <li><a href="#intro8">레이아웃8</a></li>
                         <li><a href="#intro9">레이아웃9</a></li>
                         <li><a href="#intro10">레이아웃10</a></li>
-                        <!-- <li><a href="#intro11">레이아웃11</a></li> -->
+                        <li><a href="#Intro-test10">레이아웃 테스트10</a></li>
+                        <li><a href="#Intro-test11">레이아웃 테스트11</a></li>
+                        <li><a href="#Intro-test12">레이아웃 테스트12</a></li>
+                        <li><a href="#Intro-test13">레이아웃 테스트13</a></li>
+                        <li><a href="#Intro-test14">레이아웃 테스트14</a></li>
                     </ul>
                 </div>
             </div>
