--- a/layout/layout-test12.html
+++ b/layout/layout-test12.html
@@ -18,6 +18,7 @@
             margin: 0 auto;
         }
         #header {
+            width: 100%;
             height: 200px;
             background-color: #FFE0B2;
         }
@@ -44,7 +45,15 @@
             height: 200px;
             background-color: #FF9800;
         }
+        @media (max-width: 1220px){
+            #wrap {
+                width: 100%;
+            }
+        }
         @media (max-width: 1000px){
+            #wrap {
+                width: 100%;
+            }
             #header {
                 height: 300px;
             }
@@ -53,7 +62,11 @@
             }
         }
         @media (max-width: 600px){
+            #wrap {
+                width: 100%;
+            }
             #header {
+                width: 100%;
                 height: 300px;
             }
             .aside {
