--- a/layout/layout-test13.html
+++ b/layout/layout-test13.html
@@ -50,7 +50,15 @@
             height: 150px;
             background-color: #43A047;
         }
+        @media (max-width: 1220px){
+            #wrap {
+                width: 100%;
+            }
+        }
         @media (max-width: 1000px){
+            #wrap {
+                width: 100%;
+            }
             .aside {
                 width: 30%;
                 height: 500px;
@@ -65,6 +73,9 @@
             }
         }
         @media (max-width: 600px){
+            #wrap {
+                width: 100%;
+            }
             .aside {
                 width: 100%;
                 height: 200px;
