--- a/layout/layout-test14.html
+++ b/layout/layout-test14.html
@@ -56,7 +56,15 @@
             height: 200px;
             background-color: #1976D2;
         }
+        @media (max-width: 1220px){
+            #wrap {
+                width: 100%;
+            }
+        }
         @media(max-width: 1000px){
+            #wrap {
+                width: 100%;
+            }
             .aside {
                 width: 30%;
                 height: 400px;
@@ -75,6 +83,9 @@
             }
         }
         @media(max-width: 600px){
+            #wrap {
+                width: 100%;
+            }
             .aside {
                 width: 100%;
                 height: 200px;
