--- a/layout/index.html
+++ b/layout/index.html
@@ -254,7 +254,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <a href="#" class="thumbnail">
-                                <img src="img/layout-test12.jpg" alt="레이아웃">
+                                <img src="img/layout-test12.png" alt="레이아웃">
                             </a>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                     <div class="row">
                         <div class="col-md-13">
                             <a href="#" class="thumbnail">
-                                <img src="img/layout-test13.jpg" alt="레이아웃">
+                                <img src="img/layout-test13.png" alt="레이아웃">
                             </a>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                     <div class="row">
                         <div class="col-md-14">
                             <a href="#" class="thumbnail">
-                                <img src="img/layout-test14.jpg" alt="레이아웃">
+                                <img src="img/layout-test14.png" alt="레이아웃">
                             </a>
                         </div>
                     </div>
