--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -1,11 +1,17 @@
-/* 카드 타입 유형 */
+/* cardType */
+body {
+    background: #f3f3f3;
+}
+.cardType {
+    margin: 150px 0;
+    background-color: #fff;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
+}
 
 /* cardType01 */
-#cardType {}
-
 .cardType01 {
     font-family: 'GmarketSans';
-    padding: 60px 0;
+    padding: 150px 0;
 }
 .cardType01 h2 {
     font-weight: 500;
@@ -33,27 +39,115 @@
 } */
 
 /* flex를 이용한 레이아웃(최신버전) */
-.card-wrap {
+.cardType01 .card-wrap {
     display: flex;
     /* gap: 10px; */
-    justify-content: space-between; /* 가로정렬: 양쪽이 딱 붙는다 */
+    justify-content: space-between; 
 }
-.card-wrap > div {
+.cardType01 .card-wrap > div {
     width: 387px;
 }
-.card {}
-.card .card-img {}
-.card .card-title {
+.cardType01 .card {}
+.cardType01 .card .card-img {}
+.cardType01 .card .card-title {
     display: block;
     font-size: 32px;
-}
-.card .card-desc {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}    
+    /* white-space: nowrap, overflow: hidden, text-overflow   -> 한줄효과 */
+.cardType01 .card .card-desc {
     font-size: 20px;
     font-weight: 300;
     display: block;
+    overflow: hidden;               
+    display: -webkit-box;           
+    -webkit-line-clamp: 2;          
+    -webkit-box-orient: vertical;
 }
-.card .card-keyword {
+/* 넘치는 부분을 일단 차단 */
+/* 벤더 프리픽스 */
+/* 두줄효과 */
+
+.cardType01 .card .card-keyword {
     font-size: 16px;
     font-weight: 300;
     opacity: 0.5;
 }
+
+
+/* cardType02 */
+.cardType02 {
+    font-family: 'S-CoreDream';
+    padding: 150px 0;
+}
+.cardType02 h2 {
+    font-weight: 500;
+    font-size: 50px;
+    margin-bottom: 7px;
+    text-align: center;
+}
+.cardType02 p {
+    font-weight: 300;
+    font-size: 26px;
+    line-height: 1.28;
+    margin-bottom: 40px;
+    text-align: center;
+}
+/* float: left 이용 방법 */
+/* .cardType02 .card-wrap {
+    overflow: hidden;
+}
+.cardType02 .card-wrap .card {
+    float: left;
+    box-sizing: border-box;
+}
+.cardType02 .card-wrap .card:last-child {
+    margin-right: 0;
+} */
+
+
+/* display: flex 이용 방법 */
+/* .cardType02 .card-wrap {
+    display: flex;
+} */
+
+/* grid 이용 방법 */
+.cardType02 .card-wrap {
+    display: grid;
+    grid-template-columns: repeat(4, 285px);
+    gap: 20px;
+}
+
+.cardType02 .card-wrap {}
+.cardType02 .card-wrap .card {
+    width: 285px;
+    height: 356px;
+    margin: 40px 20px 0 0;
+    padding: 15px 15px 16px 14px;
+    border-radius: 5px;
+    border: 1px solid #e6e6e6;
+    box-sizing: border-box;
+}
+.cardType02 .card-wrap .card .card-title {
+    display: block;
+    font-size: 24px;
+    font-weight: 500;
+}
+.cardType02 .card-wrap .card .card-desc {
+    display: block;
+}
+.cardType02 .card-wrap .card .card-word {}
+.cardType02 .card-wrap .card .card-word span {
+    margin: 6px 202px 0 1px;
+    padding: 4px 16px 3px;
+    border-radius: 20px;
+    background-color: #000;
+    display: inline-block;
+    color: #fff;
+    font-size: 10px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
