--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -134,3 +134,98 @@ body {
     text-transform: uppercase;
     display: inline-block;
 }
+
+/* cardType03 */
+.cardType03 {
+    font-family: 'NanumSquare';
+    padding: 150px 0;
+}
+.cardType03 .card-head {}
+.cardType03 .card-head h2 {
+    font-size: 50px;
+    font-weight: 800;
+    margin-bottom: 10px;
+}
+.cardType03 .card-head p {
+    font-size: 18px;
+    line-height: 1.28;
+    display: inline-block;
+    margin-right: 560px;
+    margin-bottom: 20px;
+}
+.cardType03 .card-head .card-side {
+    font-size: 16px;
+    display: inline-block;
+}
+.cardType03 .card-head .card-side span {
+    margin-right: 20px;
+}
+.cardType03 .card-wrap {}
+.cardType03 .card-wrap .card {}
+.cardType03 .card-wrap .card a {
+    height: 185px;
+    display: flex;
+    margin: 30px 0;
+}
+.cardType03 .card-wrap .card .card-img {
+    width: 285px;
+    border-radius: 10px;
+}
+.cardType03 .card-wrap .card .card-aside {}
+.cardType03 .card-wrap .card .card-aside .card-btn {
+    margin: 46px 716px 9px 20px;
+    padding: 2px 15px 2px 15px;
+    border-radius: 20px;
+    background-color: #5465ff;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+}
+.cardType03 .card-wrap .card .card-aside .card-btn1 {
+    margin: 46px 716px 9px 20px;
+    padding: 2px 15px 2px 15px;
+    border-radius: 20px;
+    background-color: #ff5151;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+}
+.cardType03 .card-wrap .card .card-aside .card-btn2 {
+    margin: 46px 716px 9px 20px;
+    padding: 2px 15px 2px 15px;
+    border-radius: 20px;
+    background-color: #ff4646;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+}
+.cardType03 .card-wrap .card .card-aside .card-btn3 {
+    margin: 46px 716px 9px 20px;
+    padding: 2px 15px 2px 15px;
+    border-radius: 20px;
+    background-color: #11c865;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+}
+.cardType03 .card-wrap .card .card-aside .card-title {
+    margin: 9px 179px 14px 19px;
+    font-size: 26px;
+    font-weight: bold;
+    display: block;
+    white-space: nowrap;
+}
+.cardType03 .card-wrap .card .card-aside .card-desc {
+    margin:2px 2px 10px 19px;
+    font-size: 16px;
+    line-height: 1.53;
+    color: #555;
+    display: inline-block;
+}
+.cardType03 .card-wrap .card .card-aside .card-date {
+    margin: 0 682px 27px 20px;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 1.4;
+    color: #555;
+}
