--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -137,96 +137,83 @@ body {
 
 /* cardType03 */
 .cardType03 {
-    font-family: 'NanumSquare';
-    padding: 150px 0;
+    padding: 100px 0;
+    font-family: "NanumSquare";
+    position: relative;
 }
-.cardType03 .card-head {}
-.cardType03 .card-head h2 {
+.cardType03 h2 {
     font-size: 50px;
     font-weight: 800;
-    margin-bottom: 10px;
+    margin-bottom: 4px;
 }
-.cardType03 .card-head p {
+.cardType03 p {
     font-size: 18px;
+    font-weight: 400;
     line-height: 1.28;
-    display: inline-block;
-    margin-right: 560px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
-.cardType03 .card-head .card-side {
-    font-size: 16px;
-    display: inline-block;
+.cardType03 .popular {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.28;
+    position: absolute;
+    right: 0;
+    top: 180px;   
 }
-.cardType03 .card-head .card-side span {
+.cardType03 .popular a {
     margin-right: 20px;
 }
 .cardType03 .card-wrap {}
-.cardType03 .card-wrap .card {}
-.cardType03 .card-wrap .card a {
-    height: 185px;
-    display: flex;
-    margin: 30px 0;
+.cardType03 .card-wrap ul {}
+.cardType03 .card-wrap .card {
+    margin-bottom: 50px;
 }
+
 .cardType03 .card-wrap .card .card-img {
     width: 285px;
-    border-radius: 10px;
+    height: 185px;
+    position: absolute;
 }
-.cardType03 .card-wrap .card .card-aside {}
-.cardType03 .card-wrap .card .card-aside .card-btn {
-    margin: 46px 716px 9px 20px;
-    padding: 2px 15px 2px 15px;
-    border-radius: 20px;
-    background-color: #5465ff;
+.cardType03 .card-wrap .card .right {
+    padding-left: 305px;
+}
+.cardType03 .card-wrap .card .right .card-cate {
+    font-size: 14px;
+    font-weight: 800;
+    padding: 4px 14px 3px 15px;
     color: #fff;
-    text-align: center;
-    text-transform: uppercase;
-}
-.cardType03 .card-wrap .card .card-aside .card-btn1 {
-    margin: 46px 716px 9px 20px;
-    padding: 2px 15px 2px 15px;
     border-radius: 20px;
-    background-color: #ff5151;
-    color: #fff;
-    text-align: center;
-    text-transform: uppercase;
+    margin-bottom: 10px;
+    display: inline-block;
 }
-.cardType03 .card-wrap .card .card-aside .card-btn2 {
-    margin: 46px 716px 9px 20px;
-    padding: 2px 15px 2px 15px;
-    border-radius: 20px;
-    background-color: #ff4646;
-    color: #fff;
-    text-align: center;
-    text-transform: uppercase;
+.cardType03 .card-wrap .card .right .card-cate.red {
+    background: #ff5151;
 }
-.cardType03 .card-wrap .card .card-aside .card-btn3 {
-    margin: 46px 716px 9px 20px;
-    padding: 2px 15px 2px 15px;
-    border-radius: 20px;
-    background-color: #11c865;
-    color: #fff;
-    text-align: center;
-    text-transform: uppercase;
+.cardType03 .card-wrap .card .right .card-cate.blue {
+    background: #5465ff;
 }
-.cardType03 .card-wrap .card .card-aside .card-title {
-    margin: 2px 179px 5px 19px;
-    font-size: 26px;
-    font-weight: bold;
+.cardType03 .card-wrap .card .right .card-cate.green {
+    background: #11c865;
+}
+.cardType03 .card-wrap .card .right .card-title {
     display: block;
-    white-space: nowrap;
+    font-weight: bold;
+    font-size: 26px;
 }
-.cardType03 .card-wrap .card .card-aside .card-desc {
+.cardType03 .card-wrap .card .right .card-desc {
     height: 75px;
-    margin: 2px 2px 25px 19px;
     font-size: 16px;
     line-height: 1.53;
     color: #555;
-    display: inline-block;
+    font-weight: 300;
+    margin-bottom: 17px;
 }
-.cardType03 .card-wrap .card .card-aside .card-date {
-    margin: 0 682px 27px 20px;
+.cardType03 .card-wrap .card .right .card-date {
+    display: block;
+    color: #555;
     font-size: 14px;
     font-weight: bold;
     line-height: 1.4;
-    color: #555;
+    text-decoration: underline;
+    margin-top: 10px;
 }
