--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -110,12 +110,12 @@ body {
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 10px;
+    display: block;
 }
 .cardType02 .card-wrap .card .card-desc {
     font-size: 14px;
     font-weight: 300;
     line-height: 1.4;
-    margin-bottom: 6px;
     display: block;
 }
 .cardType02 .card-wrap .card .card-word {
@@ -123,7 +123,7 @@ body {
 }
 .cardType02 .card-wrap .card .card-word span {
     font-size: 10px;
-    margin: 15px 0 30px 0;
+    margin: 12px 0 30px 0;
     padding: 4px 16px 3px;
     border-radius: 20px;
     border: solid 1px #000;
