--- a/site/css/imgType.css
+++ b/site/css/imgType.css
@@ -115,3 +115,73 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* imgType03 */
+.imgType03 {
+    padding: 150px 0;
+    font-family: 'GmarketSans';
+}
+.imgType03 h2 {
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+.imgType03 .img-wrap {
+    display: grid;
+    grid-template-columns: repeat(2, 590px);
+    gap: 20px;
+}
+.imgType03 .img-wrap .img-card {
+    width: 590px;
+    height: 590px;
+    justify-content: space-between;
+    margin-right: 20px;
+}
+.imgType03 .img-wrap .img-card .img-img {
+    position: relative;
+}
+.imgType03 .img-wrap .img-card .inner1 {
+    position: absolute;
+    left: 23%;
+    top: 77%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0,0,0,0.6);
+    width: 490px;
+    padding: 15px 15px;
+    color: #fff;
+}
+.imgType03 .img-wrap .img-card .inner1 .img-title {
+    display: block;
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+.imgType03 .img-wrap .img-card .inner1 .img-desc {
+    font-size: 14px;
+    font-weight: 300;
+}
+.imgType03 .img-wrap .img-card .inner2 div {
+    height: 290px;
+    position: relative;
+    float: left;
+    margin-bottom: 15px;
+}
+.imgType03 .img-wrap .img-card .inner2 div:nth-child(2),
+.imgType03 .img-wrap .img-card .inner2 div:nth-child(4) {
+    margin-left: 20px;
+}
+.imgType03 .img-wrap .img-card .inner2 img.inner-img {
+}
+.imgType03 .img-wrap .img-card .inner2 .inner-title {
+    display: block;
+    position: absolute;
+    left: 20%;
+    top: 89%;
+    transform: translate(-50%, -50%);
+    font-size: 14px;
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+    padding: 8px 15px 5px 15px;
+    width: 60px;
+    text-align: center;
+
+}
