--- a/layout/index.html
+++ b/layout/index.html
@@ -64,8 +64,8 @@
             <nav class="collapse navbar-collapse bs-navbar-collapse pull-right" role="navigation">
                 <ul class="nav navbar-nav">
                     <li><a href="https://kdongnote.tistory.com/">Tistory</a></li>
-                    <!-- <li><a href="https://codepen.io/webstoryboy">Codepen</a></li> -->
-                    <li><a href="https://github.com/webstoryboy/dothome1">Github</a></li>
+                    <li><a href="https://codepen.io/kdong1224">Codepen</a></li>
+                    <li><a href="https://kdong1224.github.io/dothome21/">Github</a></li>
                     <!-- <li><a href="https://www.figma.com/@874463">Figma</a></li> -->
                 </ul>
             </nav>
