--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -180,6 +180,34 @@ a {
     box-shadow: inset 0 -100px 0 #000;
     color: #fff;
 }
+.result {}
+.result .result-title {
+    font-size: 15px;
+    margin-top: 8px;
+    background: #E6E6E6;
+    display: inline-block;
+    padding: 8px 10px 6px 10px;
+    color: #000;
+    border-radius: 5px;
+}
+.result .result-title.red {
+    background-color: #E4E4E1;
+    background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
+ 	background-blend-mode: normal, multiply;
+    color: #000;
+    border-radius: 5px 5px 0 0;
+}
+.result div {
+    color: #fff;
+    
+}
+.result div.active {
+    color: #000;
+    padding: 10px 10px;
+    background-color: #000;
+    color: #fff;
+    border-radius: 0 5px 5px 5px;
+}
 .view {
     padding: 20px;
 }
