--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -46,7 +46,7 @@ a {
     color: #333;
 }
 .sample {
-    border: 1px solid #E6E6E6;
+    /* border: 1px solid #E6E6E6; */
     border-radius: 5px;
 }
 .sample h2 {
@@ -54,7 +54,7 @@ a {
     font-size: 16px;
     background-color: #F2F2F2;
     padding: 15px;
-    border-bottom: 1px solid #E6E6E6;
+    border: 1px solid #E6E6E6;
     border-radius: 5px 5px 0 0;
 }
 .sample h2 .dot {
@@ -180,8 +180,8 @@ a {
     box-shadow: inset 0 -100px 0 #000;
     color: #fff;
 }
-.result {}
-.result h3 {
+.sample .result-box {}
+.sample .result-box h3 {
     font-size: 15px;
     margin-top: 8px;
     background: #E6E6E6;
@@ -190,22 +190,17 @@ a {
     color: #000;
     border-radius: 5px;
 }
-.result h3:hover {
+.sample .result-box h3:hover {
     cursor: pointer;
+}
+.sample .result-box h3.active {
     background-color: #E4E4E1;
     background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
  	background-blend-mode: normal, multiply;
-    color: #000;
+    color: rgb(42, 43, 40);
     border-radius: 5px 5px 0 0;
 }
-/* .result .result-title.active {
-    background-color: #E4E4E1;
-    background-image: radial-gradient(at top center, rgba(255,255,255,0.03) 0%, rgba(0,0,0,0.03) 100%), linear-gradient(to top, rgba(255,255,255,0.1) 0%, rgba(143,152,157,0.60) 100%);
- 	background-blend-mode: normal, multiply;
-    color: #000;
-    border-radius: 5px 5px 0 0;
-} */
-.result .text {
+.sample .result-box div {
     display: none;
     color: #000;
     padding: 10px 10px;
@@ -213,7 +208,8 @@ a {
     color: #fff;
     border-radius: 0 5px 5px 5px;
 }
-.result text.active {
+.sample .result-box div.active {
+    font-size: 13px;
     display: block;
 }
 .view {
