--- a/site/css/imgType.css
+++ b/site/css/imgType.css
@@ -185,3 +185,44 @@ body {
     text-align: center;
 
 }
+
+/* imageType04 */
+.imageType04 {
+    padding: 100px 0;
+}
+.imageType04 h2 {
+    font-size: 52px;
+    text-align: center;
+    margin-bottom: 75px;
+    line-height: 1.3;
+}
+.imageType04 .image-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+.imageType04 .image-wrap .image {
+    position: relative;
+}
+.imageType04 .image-wrap .image .image-cont {
+    position: absolute;
+    left: 55%;
+    top: 15%;
+    transform: translate(-50%, -50%);
+}
+.imageType04 .image-wrap .image .image-cont em {
+    display: block;
+    font-size: 13px;
+    font-weight: 600;
+    margin-bottom: 18px;
+    color: #a9a3a3;
+}
+.imageType04 .image-wrap .image .image-cont strong {
+    display: inline;
+    width: 320px;
+    font-size: 20px;
+    font-weight: 900;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
