--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -19,11 +19,14 @@
     line-height: 1.6;
 }
 body {
-    padding: 5%;
+    /* padding: 5%; */
     margin-bottom: 400px;
 }
 h1 {
     padding: 20px 0;
+    border-top: 3px solid #3e2723;
+    border-bottom: 1px solid #6d4c41;
+    margin-bottom: 20px;
 }
 h1 a {
     font-family: 'TmonMonsori';
@@ -43,7 +46,18 @@ ol {
 }
 a {
     text-decoration: none;
-    color: #333;
+    color: #3e2723;
+}
+#wrap {
+    margin: 1vh;
+    border: 8px solid #304ffe;
+    border-radius: 20px;
+}
+#contents {
+    border: 8px solid #8c9eff;
+    padding: 2%;
+    border-radius: 12px;
+    height: 100%;
 }
 .sample {
     /* border: 1px solid #E6E6E6; */
@@ -52,7 +66,7 @@ a {
 .sample h2 {
     position: relative;
     font-size: 16px;
-    background-color: #F2F2F2;
+    background-color: #bbdefb;
     padding: 15px;
     border: 1px solid #E6E6E6;
     border-radius: 5px 5px 0 0;
@@ -60,7 +74,7 @@ a {
 .sample h2 .dot {
     width: 10px;
     height: 10px;
-    background: #989898;
+    background: #3d5afe;
     display: block;
     border-radius: 50%;
     position: absolute;
@@ -71,7 +85,7 @@ a {
     content: '';
     width: 10px;
     height: 10px;
-    background: #989898;
+    background: #bf360c;
     border-radius: 50%;
     position: absolute;
     left: -15px;
@@ -81,7 +95,7 @@ a {
     content: '';
     width: 10px;
     height: 10px;
-    background: #989898;
+    background: #ffff00;
     position: absolute;
     border-radius: 50%;
     right: -15px;
@@ -166,18 +180,19 @@ a {
 }
 .menu li a {
     font-family: 'NEXON Lv1 Gothic OTF';
-    color: #000;
-    border: 1px dashed #000;
+    color: #3e2723;
+    border: 1px dashed #3e2723;
     padding: 10px 30px;
     display: inline-block;
     border-radius: 50px;
     font-size: 16px;
     margin: 4px 1px;
-    box-shadow: inset 0 0 0 #000;
+    box-shadow: inset 0 0 0 #3e2723;
     transition: all 0.4s;
 }
 .menu li a:hover {
-    box-shadow: inset 0 -100px 0 #000;
+    background: #304ffe;
+    box-shadow: inset 0 -100px 0 #304ffe;
     color: #fff;
 }
 .sample .result-box {}
@@ -221,7 +236,7 @@ border-style: solid;
 border-color: #e6e6e6;
 border: 1px solid #E6E6E6; /* 속기형 작성법 */
 text-align: center;
-vertical-align: middle;
+vertical-align: center;
 border-collapse: collapse;
 }
 .view table th {
@@ -258,6 +273,7 @@ padding: 0 20px;
 .view {
     padding: 20px; 
     border: 1px solid #f2f2f2;
+    overflow: auto;
 }
 .view ul {
     display: flex;
@@ -301,11 +317,17 @@ padding: 0 20px;
 }
 @media(max-width: 800px){
     body {
-        padding: 5%;
+        /* padding: 2%; */
         font-size: 13px;
     }
     h1 {
         text-align: center;
+    }
+    #wrap {
+        margin: 0.5vh;
+    }
+    #contents {
+        padding: 4%;
     }
     .menu li a {
         font-size: 12px;
@@ -331,7 +353,6 @@ padding: 0 20px;
     .view {
         padding: 5px;
         max-width: 800px;
-        overflow: auto;
     }
     .view table {
         border-left: 0px;
