--- a/refer-jquery/style.css
+++ b/refer-jquery/style.css
@@ -296,9 +296,13 @@ hr {
     .view li {
         padding: 10px;
         margin: 0 8px 8px 0;
+
     }
     .btn {
         padding: 10px;
+    }
+    .btn a {
+        font-size: 11px;
     }
     .table {
         overflow: auto;
