--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -315,6 +315,7 @@ padding: 0 20px;
     margin: 4px 0;
     color: #222;
     transition: all 0.2s;
+    text-align: center;
 }
 .btn a:hover {
     background: #000;
