--- a/refer-javascript/style.css
+++ b/refer-javascript/style.css
@@ -17,6 +17,7 @@
     padding: 0;
     font-family: 'NEXON Lv1 Gothic OTF';
     line-height: 1.6;
+    box-sizing: border-box;
 }
 body {
     /* padding: 5%; */
@@ -49,15 +50,18 @@ a {
     color: #3e2723;
 }
 #wrap {
-    margin: 1vh;
-    border: 8px solid #304ffe;
+    margin: 2vh;
+    border: 8px solid #0e43f1;
     border-radius: 20px;
+    /* height: 96vh; */
 }
 #contents {
-    border: 8px solid #8c9eff;
-    padding: 2%;
+    border: 8px solid #50b5f9;
     border-radius: 12px;
+    padding: 5% 2%;
     height: 100%;
+    justify-content: center;
+    flex-direction: column;
 }
 .sample {
     /* border: 1px solid #E6E6E6; */
@@ -330,10 +334,12 @@ padding: 0 20px;
         text-align: center;
     }
     #wrap {
-        margin: 0.01vh;
+        margin: 0vh;
+        border: 6px solid #0e43f1;
     }
     #contents {
         padding: 4%;
+        border: 6px solid #50b5f9;
     }
     .menu li a {
         font-size: 12px;
