--- a/refer-jquery/style.css
+++ b/refer-jquery/style.css
@@ -77,7 +77,7 @@ hr {
     border-radius: 50px;
     font-size: 16px;
     margin: 4px 1px;
-    box-shadow: inset 0 0 0 #ff9800;
+    box-shadow: inset 0 0 0 #000;
     transition: all 0.4s;
 }
 .menu li a:hover {
