--- a/site/css/cardType.css
+++ b/site/css/cardType.css
@@ -259,3 +259,80 @@ body {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+
+
+
+
+/* cardType05 */
+.cardType05 {
+    padding: 100px 0;
+    font-family: 'Nanum Gothic';
+}
+.cardType05 h2 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 6px;
+}
+.cardType05 p {
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 60px;
+}
+
+.cardType05 .card-wrap {
+    display: grid;
+    grid-template-columns: repeat(3,381px);
+    justify-content: space-between;
+    gap: 30px;
+}
+.cardType05 .card-wrap .card {
+    width: 381px;
+    border: 1px solid #ebebeb;
+    border-radius: 8px;
+}
+.cardType05 .card-wrap .card img {}
+.cardType05 .card .card-cards {
+    overflow: hidden;
+    margin: 36px 13px 2px 40px;
+}
+.cardType05 .card .card-cards .card-title {
+    float: left;
+    font-size: 25px;
+    font-weight: 800;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.cardType05 .card .card-cards .card-new {
+    float: left;
+    font-size: 12px;
+    font-weight: 800;
+    padding: 4px 10px 2px 10px;
+    border-radius: 50px;
+    background-color: #fa615b;
+    color: #fff;
+    margin-top: 5px;
+}
+.cardType05 .card .card-cards .card-desc {
+    clear: both;
+    display: block;
+    font-size: 16px;
+    margin-bottom: 20px;
+    line-height: 2;
+    font-weight: 700;
+    opacity: 0.5;
+}
+.cardType05 .card .card-cards .card-btn {}
+.cardType05 .card .card-cards .card-btn a {
+    display: inline-block;
+    font-size: 16px;
+    padding: 5px 20px 5px 20px;
+    border: 1px solid #ebebeb;
+    margin-bottom: 30px;
+}
+.cardType05 .card .card-cards .card-btn a.btn1 {
+    margin-right: 20px;
+    background-color: #06d686;
+    color: #fff;
+}
+.cardType05 .card .card-cards .card-btn a.btn2 {}
