--- a/layout/index.html
+++ b/layout/index.html
@@ -46,6 +46,11 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.../assets2/js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        .bgs1 {
+            background-image: linear-gradient(-225deg, #A445B2 0%, #D41872 52%, #FF0066 100%);
+        }
+    </style>
 </head>
 
 <body>
