--- a/refer-css/style.css
+++ b/refer-css/style.css
@@ -64,9 +64,8 @@ main h2 em {
 .refer h3 {
     display: inline-block;
     padding: 6px 30px;
-    background-color: #000;
+    background-color: #ff9800;
     margin-bottom: 40px;
-    background-image: linear-gradient(to top, #96fbc4 0%, #f9f586 100%);
     color: #000;
 }
 .refer h3.ex {
@@ -74,7 +73,7 @@ main h2 em {
 }
 .refer h3 a {
     text-decoration: none;
-    color: rgba(101, 16, 238, 0.5);
+    color: #fff
 }
 .refer h3.active {
     box-shadow: inset 0 -5px 0 0 rgb(101, 16, 238);
