--- a/refer-css/style.css
+++ b/refer-css/style.css
@@ -66,7 +66,7 @@ main h2 em {
     padding: 6px 30px;
     background-color: #ff9800;
     margin-bottom: 40px;
-    color: #000;
+    color: #fff;
 }
 .refer h3.ex {
     background-color: #000000;
