--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -253,15 +253,18 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     color: #fff;
     font-family: $font-Nexon1;
     padding: 20px;
+    position: absolute;
+    left: 0;
+    top: 0;
 
     &.right {
-        position: absolute;
+        left: auto;
         right: 0px;
-        top: 0px;
     }
 
     &.bottom {
-        position: absolute;
+        top: auto;
+        left: auto;
         bottom: 0;
         right: 0;
     }
@@ -314,10 +317,10 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
         border-radius: 50px;
         box-shadow: 0 0 0 #fff inset;
         transition: all 0.4s;
+        cursor: pointer;
 
         &:hover {
             box-shadow: 0 -50px 0 #fff inset;
-            cursor: pointer;
             color: #000;
         }
     }
@@ -352,9 +355,6 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     }
 
     .modal-cont {
-        background: #fff;
-        padding: 3vw;
-        max-width: 50vw;
 
         h2 {
             font-weight: 700;
@@ -369,12 +369,21 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
 
         button {
             float: right;
-            border: 1px solid #000;
-            background: #000;
+            border: 1px solid #fff;
+            background: #fff;
             border-radius: 20px;
-            color: #fff;
+            color: #000;
             padding: 5px 10px;
             cursor: pointer;
+            margin-top: 15px;
+            font-family: $font-Nexon2;
+            box-shadow: 0 0 0 #000 inset;
+            transition: all 0.4s;
+
+            &:hover {
+                box-shadow: 0 -50px 0 #000 inset;
+                color: #fff;
+            }
         }
     }
 }
@@ -412,7 +421,80 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
 	100% {transform: scale(0)}
 }
 
-//media
+//code-view
+.code-view {
+    background: #fff;
+    width: 60vw;
+    border: 1px solid #f2f2f2;
+    border-radius: 10px;
+    overflow: hidden;
+
+    .view-header{
+        border-bottom: 1px solid #f2f2f2;
+        .dot {
+            padding: 10px 15px;
+
+            span {
+                width: 12px;
+                height: 12px; 
+                display: inline-block;
+                border-radius: 50%; 
+                margin: 0 2px;
+            }
+            span:nth-child(1) {
+                background-color: #f56565;
+            }
+            span:nth-child(2) {
+                background-color: #f6e05e;
+            }
+            span:nth-child(3) {
+                background-color: #48bb78;
+            }
+        }
+    }             
+    .view-title{
+        border-bottom: 1px solid #f2f2f2;
+        padding: 0 11px;
+        font-family: $font-Nexon2;
+
+        li {
+            display: inline;
+            list-style: none;
+
+            a {
+                text-decoration: none;
+                color: #ccc;
+                padding: 10px 10px 12px;
+                margin: 0 5px;
+                display: inline-block;
+            }
+
+            &.active a {
+                border-top: 2px solid #667EEA;
+                color: #4a5568;
+            }
+        }   
+    }
+    .view-cont {
+        height: 70vh;
+        overflow-y: scroll;
+
+        > div {
+            display: none;
+        }
+        > div:nth-child(1).active{
+            display: block;
+        }
+        > div:nth-child(2).active{
+            display: block;
+        }
+        > div:nth-child(3).active{
+            display: block;
+        }
+    }
+}
+
+
 @media(max-width: 800px){
     #contents {
         h1 {
@@ -450,5 +532,8 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
                 margin-bottom: 10px;
             }
         }
+    }
+    .code-view {
+        width: 90vw;
     }
 }
