--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -265,16 +265,19 @@ a {
   color: #fff;
   font-family: "NEXONLv1Gothic";
   padding: 20px;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
 .info.right {
-  position: absolute;
+  left: auto;
   right: 0px;
-  top: 0px;
 }
 
 .info.bottom {
-  position: absolute;
+  top: auto;
+  left: auto;
   bottom: 0;
   right: 0;
 }
@@ -327,12 +330,12 @@ a {
           box-shadow: 0 0 0 #fff inset;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
+  cursor: pointer;
 }
 
 .info button:hover {
   -webkit-box-shadow: 0 -50px 0 #fff inset;
           box-shadow: 0 -50px 0 #fff inset;
-  cursor: pointer;
   color: #000;
 }
 
@@ -381,12 +384,6 @@ a {
           justify-content: center;
 }
 
-#modal .modal-cont {
-  background: #fff;
-  padding: 3vw;
-  max-width: 50vw;
-}
-
 #modal .modal-cont h2 {
   font-weight: 700;
   font-size: 40px;
@@ -400,12 +397,24 @@ a {
 
 #modal .modal-cont button {
   float: right;
-  border: 1px solid #000;
-  background: #000;
+  border: 1px solid #fff;
+  background: #fff;
   border-radius: 20px;
-  color: #fff;
+  color: #000;
   padding: 5px 10px;
   cursor: pointer;
+  margin-top: 15px;
+  font-family: "NEXONLv2Gothic";
+  -webkit-box-shadow: 0 0 0 #000 inset;
+          box-shadow: 0 0 0 #000 inset;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+#modal .modal-cont button:hover {
+  -webkit-box-shadow: 0 -50px 0 #000 inset;
+          box-shadow: 0 -50px 0 #000 inset;
+  color: #fff;
 }
 
 #modal.show {
@@ -521,6 +530,87 @@ a {
   }
 }
 
+.code-view {
+  background: #fff;
+  width: 60vw;
+  border: 1px solid #f2f2f2;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.code-view .view-header {
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.code-view .view-header .dot {
+  padding: 10px 15px;
+}
+
+.code-view .view-header .dot span {
+  width: 12px;
+  height: 12px;
+  display: inline-block;
+  border-radius: 50%;
+  margin: 0 2px;
+}
+
+.code-view .view-header .dot span:nth-child(1) {
+  background-color: #f56565;
+}
+
+.code-view .view-header .dot span:nth-child(2) {
+  background-color: #f6e05e;
+}
+
+.code-view .view-header .dot span:nth-child(3) {
+  background-color: #48bb78;
+}
+
+.code-view .view-title {
+  border-bottom: 1px solid #f2f2f2;
+  padding: 0 11px;
+  font-family: "NEXONLv2Gothic";
+}
+
+.code-view .view-title li {
+  display: inline;
+  list-style: none;
+}
+
+.code-view .view-title li a {
+  text-decoration: none;
+  color: #ccc;
+  padding: 10px 10px 12px;
+  margin: 0 5px;
+  display: inline-block;
+}
+
+.code-view .view-title li.active a {
+  border-top: 2px solid #667EEA;
+  color: #4a5568;
+}
+
+.code-view .view-cont {
+  height: 70vh;
+  overflow-y: scroll;
+}
+
+.code-view .view-cont > div {
+  display: none;
+}
+
+.code-view .view-cont > div:nth-child(1).active {
+  display: block;
+}
+
+.code-view .view-cont > div:nth-child(2).active {
+  display: block;
+}
+
+.code-view .view-cont > div:nth-child(3).active {
+  display: block;
+}
+
 @media (max-width: 800px) {
   #contents h1 {
     font-size: 18vw;
@@ -553,5 +643,8 @@ a {
   #modal .modal-cont p {
     font-size: 12px;
     margin-bottom: 10px;
+  }
+  .code-view {
+    width: 90vw;
   }
 }
