--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -647,4 +647,9 @@ a {
   .code-view {
     width: 90vw;
   }
+  .code-view .view-title li a {
+    font-size: 14px;
+    padding: 10px 10px 12px;
+    margin: 0 5px;
+  }
 }
