--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -127,6 +127,14 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     top: 0;
 }
 
+//agent
+.iphone main {
+    padding: 10px;
+}
+.android main {
+    padding: 10px;
+}
+
 //bg
 .bg {
     position: relative;
@@ -145,6 +153,11 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
 }
 
 @for $i from 1 through 10 {
+    .bg#{$i} {
+        background-image: url(../img/bg#{$i}@2.jpg);
+    }
+}
+@for $i from 11 through 20 {
     .bg#{$i} {
         background-image: url(../img/bg#{$i}@2.jpg);
     }
