--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -174,9 +174,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     &.menu {
         background: $gradient2;
 
-        
-        & #contents a {
-            -webkit-background-clip: text;
+        & #contents h1 {
             background-image: $text2;
         }
     }
@@ -184,32 +182,28 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     &.mouse {
         background: $gradient3;
 
-        & #contents a {
-            -webkit-background-clip: text;
+        & #contents h1 {
             background-image: $text3;
         }
     }
     &.slider {
         background: $gradient4;
 
-        & #contents a {
-            -webkit-background-clip: text;
+        & #contents h1 {
             background-image: $text4;
         }
     }
     &.parallax {
         background: $gradient5;
 
-        & #contents a {
-            -webkit-background-clip: text;
+        & #contents h1 {
             background-image: $text5;
         }
     }
     &.game {
         background: $gradient6;
 
-        & #contents a {
-            -webkit-background-clip: text;
+        & #contents h1 {
             background-image: $text6;
         }
     }
@@ -356,7 +350,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     @include fixed;
     width: 100%;
     height: 100vh;
-    z-index: 1000;
+    z-index: 100000;
     transform: scale(0);
 
     .modal-bg {
@@ -516,9 +510,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
     }
     #nav {
         ul {
-            display: grid;
-            grid-template-columns: repeat(5, 70px);
-            gap: 10px;
+            display: flex;
 
             li {
                 a {
@@ -541,6 +533,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
         top: 0;
         .modal-cont {
             padding: 20px;
+            height: 100vh;
             h2 {
                 font-size: 25px;
                 margin-bottom: 10px;
@@ -568,5 +561,255 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
                 }
             }   
         }
+    }
+}
+
+// parallax
+.parallax {
+    background: #222;
+    color: #fff;
+    font-family: 'NEXONLv1Gothic';
+    position: relative;
+}
+
+.paraScroll {
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
+    z-index: 1000;
+    background: rgba(0,0,0,0.4);
+    color: #fff;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 12px;
+    padding: 0px 20px 2px;
+}
+
+.paraInfo2 {
+    position: fixed;
+    left: 20px;
+    bottom: 70px;
+    z-index: 1000;
+    background: rgba(0,0,0,0.4);
+    color: #fff;
+    padding: 20px;
+    font-size: 12px;
+    line-height: 1.8;
+    border-radius: 10px;
+    
+    li {
+        list-style: none;
+    }
+}
+
+.paraNav {
+    position: fixed;
+    right: 20px; top: 20px;
+    z-index: 1000;
+    background: rgba(0,0,0,0.4);
+    padding: 15px 20px;
+    border-radius: 50px;
+
+    li {
+        display: inline-block;
+        list-style: none;
+
+        a {
+            color: #fff;
+            text-decoration: none;
+            display: inline-block;
+            padding: 5px;
+            width: 30px; height: 30px;
+            text-align: center;
+            line-height: 30px;
+        }
+
+        &.active a {
+            background: #fff;
+            color: #000;
+            border-radius: 50%;
+        }
+    }
+}
+
+.paraInfo {
+    padding: 20px;
+    h1 {
+        display: inline-block;
+        font-size: 20px;
+        border-bottom: 1px dashed #fff;
+        margin-bottom: 8px;
+        font-weight: 400;
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+    }
+    p {
+        font-size: 14px;
+        line-height: 1.8;
+    }
+}
+.paraCont {
+    width: 100%;
+    overflow: hidden;
+
+    .content-item {
+        width: 1000px;
+        max-width: 70vw;
+        // background: rgba(255,255,255,0.3);
+        margin: 30vw 0;
+        padding-top: 10vw;
+        text-align: right;
+        position: relative;
+
+        .num {
+            font-family: 'Lato';
+            font-weight: 100;
+            font-size: 25vw;
+            opacity: 0.07;
+            position: absolute;
+            right: -5vw; top: -10vw;
+        }
+        .title {
+            padding-bottom: 10px;
+            font-weight: 700;
+        }
+        .img-Wrap {
+            width: 100%;
+            padding-bottom: 56%;
+            background: #000;
+            position: relative;
+
+            .img {
+                position: absolute;
+                left: 0; top: 0;
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-repeat: no-repeat;
+                filter: saturate(0%);
+                transition: all 1s;
+
+                &:hover {
+                    filter: saturate(100%);
+                }
+            }
+
+            .img-jq {
+                position: absolute;
+                left: 0; top: 0;
+                width: 100%;
+                height: 100%;
+                background-size: cover;
+                background-repeat: no-repeat;
+                filter: saturate(0%);
+                transition: all 1s;
+
+                &:hover {
+                    filter: saturate(100%);
+                }
+            }
+        }
+        .desc {
+            font-size: 6vw;
+            line-height: 1.4;
+            margin-top: -6vw;
+            margin-right: -3vw;
+            position: relative;
+            z-index: 100;
+            word-break: keep-all;
+            color: #F0F600;
+        }
+
+        &:nth-child(even){
+            margin-left: auto;
+            text-align: left;
+
+            .num {
+                right: auto;
+                left: -5vw;
+            }
+
+            .desc {
+                margin-right: auto;
+                margin-left: -3vw;
+            }
+        }
+    }
+}
+@for $i from 1 through 9 {
+    .content-item {
+        &:nth-child(#{$i}){
+            .img {
+                background-image: url(../img/bg#{$i}.jpg);
+            }
+        }
+    }
+}
+@for $i from 1 through 9 {
+    .content-item {
+        &:nth-child(#{$i}){
+            .img-jq {
+                background-image: url(../img/bg1#{$i}.jpg);
+            }
+        }
+    }
+}
+.source button {
+    position: fixed;
+    right: 20px;
+    top: 100px;
+    background: rgba(0, 0, 0, 0.4);
+    padding: 5px 20px;
+    color: #fff;
+    border: 1px solid rgba(0, 0, 0, 0.4);;
+    border-radius: 50px;
+    transition: all 0.4s;
+    cursor: pointer;
+
+    // &:hover {
+    //     color: #000;
+    // }
+}
+
+@media (max-width: 800px){
+    .parallax {
+        padding: 10px 15px;
+
+        .paraInfo {
+            h1 {
+                font-size: 14px;
+            }
+            p {
+                font-size: 11px;
+                line-height: 1.2;
+            }
+        }
+        .paraNav {
+            padding: 5px 10px;
+            li {
+
+                a {
+                    font-size: 12px;
+                    width: 10px; height: 10px;
+                    line-height: 1.1;
+                }
+            }
+        }
+        .paraInfo2 {
+            font-size: 10px;
+            padding: 10px;
+        }
+        .paraScroll {
+            font-size: 10px;
+            padding: 0px 10px;
+        }
+        .source button {
+            right: 20px;
+            top: 60px;
+        }   
     }
 }
