--- a/tetris/css/style.css
+++ b/tetris/css/style.css
@@ -28,9 +28,9 @@ body {
     font-size: 50px;
 }
 .game-text > button {
-    padding: 0.5rem 1rem;
-    color: #fff;
-    background: salmon;
+    padding: 0.3rem 1rem 0.5rem;
+    color: #000;
+    background: #F85E00;
     border: none;
     cursor: pointer;
 }
