--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -256,7 +256,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
             background-image: $text4;
         }
     }
-    &.parallax {
+    &.parallaxMain {
         background: $gradient5;
 
         & #contents h1 {
