--- a/refer-effect/assets/scss/style.scss
+++ b/refer-effect/assets/scss/style.scss
@@ -797,6 +797,7 @@ $text6: linear-gradient(to bottom, #232526 0%, #414345 100%);
             z-index: 100;
             word-break: keep-all;
             color: #F0F600;
+            font-weight: 800;
         }
 
         &:nth-child(even){
