--- a/refer-effect/assets/css/style.css
+++ b/refer-effect/assets/css/style.css
@@ -1060,6 +1060,30 @@ a {
   color: #000;
 }
 
+.source02 button {
+  position: fixed;
+  left: 20px;
+  bottom: 70px;
+  width: 120px;
+  height: 40px;
+  line-height: 30px;
+  text-align: center;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 5px 20px;
+  color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-radius: 50px;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  cursor: pointer;
+}
+
+.source02 button:hover {
+  background: #fff;
+  color: #000;
+}
+
 @media (max-width: 800px) {
   .parallax .paraInfo h1 {
     font-size: 18px;
@@ -1104,4 +1128,66 @@ a {
     right: 20px;
     top: 93.6%;
   }
+}
+
+.paraFooter {
+  padding: 200px 0;
+}
+
+.paraFooter h1 {
+  font-size: 8vw;
+  line-height: 1.2;
+  padding: 10vw 8vw 0 8vw;
+  text-transform: uppercase;
+  margin-bottom: 3vw;
+}
+
+.paraFooter em {
+  display: block;
+  font-family: ‘Lato’;
+  font-weight: 100;
+  padding-left: 18vw;
+}
+
+.paraFooter .footerInfo {
+  padding: 20px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: #000;
+  padding: 15px 20px;
+  margin-bottom: 2px;
+}
+
+.paraFooter .footerInfo h2 {
+  padding-right: 20px;
+}
+
+.paraFooter .footerInfo li {
+  display: inline;
+  list-style: none;
+}
+
+.paraFooter .footerInfo li a {
+  color: #fff;
+  border: 1px dashed #fff;
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  border-radius: 50%;
+  line-height: 30px;
+  text-decoration: none;
+  margin-right: 6px;
+}
+
+.paraFooter .footerInfo li.active a {
+  background: #fff;
+  color: #000;
 }
